# IR-WIKI

./: README.md
src/: CMakeLists.txt
src/compression/: CMakeLists.txt  compression.c  compression.h
src/core/: CMakeLists.txt  compress_index.c  positional_index.c  query_compressed_index.c  wiki_json_parse.c
src/hash/: CMakeLists.txt  hash.c  hash.h
src/mmap_utils/: CMakeLists.txt  mmap_utils.c  mmap_utils.h
src/parse_expr/: CMakeLists.txt  parse_expr.c  parse_expr.h
src/str_utils/: CMakeLists.txt  Utf8Func.c  Utf8Func.h  stemming.c  stemming.h
